Fixed button spacing

--- a/GC-stockpot-recipeapp/src/styles.css
+++ b/GC-stockpot-recipeapp/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+#add {
+    margin-right: 10px;
+}
+#delete {
+    margin-right: 10px;
+}
